# llm_bt_builder

./: .gitignore  CMakeLists.txt  README.md  package.xml  requirements.txt
config/: btv4_control_nodes.yaml  btv4_control_nodes_extended.yaml  btv4_decorator_nodes.yaml
launch/: bt_client.launch.py  llm_agent.launch.py
llm_bt_builder/: bt_agent_node.py  bt_client_node.py  bt_rag_agent_node.py
objectives/: example.txt  example_sp.txt
prompts/: system_prompt.txt
srv/: GenerateBT.srv
